added some changes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,53 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a2f42c1dee.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="quicksand">
-    <header>
-        
+<body class="quicksand ">
+    <header class="header-section">
+        <div class="header-section-content">
+            <div class="nav">
+                <div class="logo">
+                    <div class="logo-image">
+                        <img src="images/logo.png" alt="">
+                    </div>
+                    <div class="logo-title">
+                        <h3>
+                            SCHOOL
+                        </h3>
+                    </div>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#" class="menu-items" style="color: #FEA301;">Home</a></li>
+                        <li><a href="#" class="menu-items" style="color: #01ACFD;">About</a></li>
+                        <li><a href="#" class="menu-items" style="color: #05D4DF;">Facilities</a></li>
+                        <li><a href="#" class="menu-items" style="color: #5D58EF;">Admission</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <button class="nav-button">Contact</button>
+                </div>
+                <div class="nav-icon">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </div>
+            <div class="banner">
+                <div class="banner-content">
+                    <div class="banner-title">
+                        <h1> <span class="title-first-part">Empowering </span> students from small age <span class="title-second-part"> towards vision </span> </h1>
+                    </div>
+                    <div class="banner-description">
+                        <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                    </div>
+                    <button class="banner-button">Enroll Now</button>
+                </div>
+                <div>
+                    <img src="images/hero-kids.png" alt="" class="banner-image">
+                </div>
+            </div>
+        </div>
     </header>
     <main>
 
