Nav and Banner section done

--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
                     <div class="banner-description">
                         <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
                     </div>
-                    <button class="banner-button">Enroll Now</button>
+                    <div class="banner-buttons">
+                        <button class="banner-button">Enroll Now</button>
+                    </div>
                 </div>
-                <div>
-                    <img src="images/hero-kids.png" alt="" class="banner-image">
+                <div class="banner-image">
+                    <img src="images/hero-kids.png" alt="" class="banner-image-content">
                 </div>
             </div>
         </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
 
