Added curiculum section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="quicksand ">
     <header class="header-section">
-        <div class="header-section-content">
+        <div class="header-section-content width">
             <div class="nav">
                 <div class="logo">
                     <div class="logo-image">
@@ -44,10 +44,12 @@
             <div class="banner">
                 <div class="banner-content">
                     <div class="banner-title">
-                        <h1> <span class="title-first-part">Empowering </span> students from small age <span class="title-second-part"> towards vision </span> </h1>
+                        <h1> <span class="title-first-part">Empowering </span> students from small age <span
+                                class="title-second-part"> towards vision </span> </h1>
                     </div>
                     <div class="banner-description">
-                        <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+                        <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in
+                            a Diverse and Dynamic World.</p>
                     </div>
                     <div class="banner-buttons">
                         <button class="banner-button">Enroll Now</button>
@@ -59,12 +61,46 @@
             </div>
         </div>
     </header>
-    <main>
-        
+    <main> 
+        <section class="curriculum background width">
+            <div class="curriculum-title">
+                <h2 class="section-title">Standard Curriculum</h2>
+            </div>
+            <div class="cards">
+                <div class="card card-1-background">
+                    <img src="images/kinder.png" alt="" class="card-image">
+                    <h3 class="card-title">Kinder (3-6) Years</h3>
+                    <p class="card-description">Nurturing young minds with fun activities, foundational skills, and a safe, engaging environment for early learning.</p>
+                    <button class="card-button" style="color: #64C8FF;">Read More</button>
+                </div>
+                <div class="card card-2-background">
+                    <img src="images/elementary.png" alt="" class="card-image">
+                    <h3 class="card-title">Elementary School</h3>
+                    <p class="card-description">Building essential skills, fostering curiosity, and encouraging creativity to prepare kids for a bright future.</p>
+                    <button class="card-button" style="color: #F0AA00;">Read More</button>
+                </div>
+                <div class="card card-3-background">
+                    <img src="images/middle.png" alt="" class="card-image">
+                    <h3 class="card-title">Middle (10-16) Years</h3>
+                    <p class="card-description">Empowering students with advanced knowledge, critical thinking, and teamwork to succeed in academics and beyond.</p>
+                    <button class="card-button" style="color: #8700FF;">Read More</button>
+                </div>
+            </div>
+            <div class="arrow-icons">
+                <i class="fa-solid fa-arrow-left"></i>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <!-- <footer class="footer-section">
+        <div class="footer-section-contents width">
+            <div class="footer-section-content">
+                
+            </div>
+            <div class="footer-section-content"></div>
+            <div class="footer-section-content"></div>
+        </div>
     </footer>
-</body>
+</body> -->
 
 </html>
