Added the footer section

--- a/index.html
+++ b/index.html
@@ -91,16 +91,43 @@
                 <i class="fa-solid fa-arrow-right"></i>
             </div>
         </section>
+        
     </main>
-    <!-- <footer class="footer-section">
+    <footer class="footer-section">
         <div class="footer-section-contents width">
-            <div class="footer-section-content">
-                
+            <div class="footer-section-content-first">
+                <div class="footer-logo-section">
+                    <div><img src="images/logo1.png" alt="" class="footer-logo"></div>
+                <div class="footer-title">Kids <br> Education</div>
+                </div>
+                <p class="footer-description">Empowering young minds with creativity, knowledge, and joy. Together, we nurture tomorrow's leaders in a safe, supportive, and inspiring learning environment.</p>
             </div>
-            <div class="footer-section-content"></div>
-            <div class="footer-section-content"></div>
+            <div class="footer-section-content">
+                <div class="footer-second-part-title"><h3>About School</h3></div>
+                <div class="footer-menus">
+                    <ul>
+                        <li><a href="" class="footer-menu">Home</a></li>
+                        <li><a href="" class="footer-menu">About</a></li>
+                        <li><a href="" class="footer-menu">Facilities</a></li>
+                        <li><a href="" class="footer-menu">Admission</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-section-content">
+                <div class="footer-second-part-title">
+                    <h3>Keep In Touch</h3>
+                </div>
+                <div class="footer-menu-social">
+                    <ul>
+                        <li><img src="images/fb.png" alt="" class="footer-social-icons"></li>
+                        <li><img src="images/dribble.png" alt="" class="footer-social-icons"></li>
+                        <li><img src="images/twitter.png" alt="" class="footer-social-icons"></li>
+                        <li><img src="images/google+.png" alt="" class="footer-social-icons"></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
-</body> -->
+</body> 
 
 </html>
