--- a/index.html
+++ b/index.html
@@ -61,49 +61,102 @@
             </div>
         </div>
     </header>
-    <main> 
-        <section class="curriculum background width">
-            <div class="curriculum-title">
-                <h2 class="section-title">Standard Curriculum</h2>
+    <main>
+        <section class="curriculum background ">
+            <div class="curriculum-content width">
+                <div class="curriculum-title">
+                    <h2 class="section-title">Standard Curriculum</h2>
+                </div>
+                <div class="cards">
+                    <div class="card card-1-background">
+                        <img src="images/kinder.png" alt="" class="card-image">
+                        <h3 class="card-title">Kinder (3-6) Years</h3>
+                        <p class="card-description">Nurturing young minds with fun activities, foundational skills, and a
+                            safe, engaging environment for early learning.</p>
+                        <button class="card-button" style="color: #64C8FF;">Read More</button>
+                    </div>
+                    <div class="card card-2-background">
+                        <img src="images/elementary.png" alt="" class="card-image">
+                        <h3 class="card-title">Elementary School</h3>
+                        <p class="card-description">Building essential skills, fostering curiosity, and encouraging
+                            creativity to prepare kids for a bright future.</p>
+                        <button class="card-button" style="color: #F0AA00;">Read More</button>
+                    </div>
+                    <div class="card card-3-background">
+                        <img src="images/middle.png" alt="" class="card-image">
+                        <h3 class="card-title">Middle (10-16) Years</h3>
+                        <p class="card-description">Empowering students with advanced knowledge, critical thinking, and
+                            teamwork to succeed in academics and beyond.</p>
+                        <button class="card-button" style="color: #8700FF;">Read More</button>
+                    </div>
+                </div>
+                <div class="arrow-icons">
+                    <i class="fa-solid fa-arrow-left"></i>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+            </section>
             </div>
-            <div class="cards">
-                <div class="card card-1-background">
-                    <img src="images/kinder.png" alt="" class="card-image">
-                    <h3 class="card-title">Kinder (3-6) Years</h3>
-                    <p class="card-description">Nurturing young minds with fun activities, foundational skills, and a safe, engaging environment for early learning.</p>
-                    <button class="card-button" style="color: #64C8FF;">Read More</button>
+        <section class="stories">
+            <div class="width">
+                <div class="curriculum-title">
+                    <h2 class="section-title">Our Stories</h2>
                 </div>
-                <div class="card card-2-background">
-                    <img src="images/elementary.png" alt="" class="card-image">
-                    <h3 class="card-title">Elementary School</h3>
-                    <p class="card-description">Building essential skills, fostering curiosity, and encouraging creativity to prepare kids for a bright future.</p>
-                    <button class="card-button" style="color: #F0AA00;">Read More</button>
+                <div class="stories-cards">
+                    <div class="stories-cards-1">
+                        <div class="stories-card-1">
+                            <img src="images/story-1.png" alt="" class="stories-image">
+                            <button class="stories-button">November 19, 2019</button>
+                            <h3 class="stories-title">A fun toddler coloring training on
+                                classroom</h3>
+                            <p class="stories-description">Beautiful branding for changes by Never Now in Australia.
+                                changes is a platform for open discussion in an inclusive and
+                                collaborative environment, providing the...</p>
+                        </div>
+                    </div>
+                    <div class="stories-cards-2">
+                        <div class="stories-card-2"><img src="images/story-2.png" alt="" class="stories-image"><button
+                                class="stories-button">November 19, 2019</button>
+                            <h3 class="stories-title">A fun toddler coloring training on
+                                classroom</h3>
+                        </div>
+                        <div class="stories-card-2"><img src="images/story-3.png" alt="" class="stories-image"><button
+                                class="stories-button">November 19, 2019</button>
+                            <h3 class="stories-title">A fun toddler coloring training on
+                                classroom</h3>
+                        </div>
+                        <div class="stories-card-2"><img src="images/story-4.png" alt="" class="stories-image"><button
+                                class="stories-button">November 19, 2019</button>
+                            <h3 class="stories-title">A fun toddler coloring training on
+                                classroom</h3>
+                        </div>
+                        <div class="stories-card-2"><img src="images/story-5.png" alt="" class="stories-image"><button
+                                class="stories-button">November 19, 2019</button>
+                            <h3 class="stories-title">A fun toddler coloring training on
+                                classroom</h3>
+                        </div>
+                    </div>
                 </div>
-                <div class="card card-3-background">
-                    <img src="images/middle.png" alt="" class="card-image">
-                    <h3 class="card-title">Middle (10-16) Years</h3>
-                    <p class="card-description">Empowering students with advanced knowledge, critical thinking, and teamwork to succeed in academics and beyond.</p>
-                    <button class="card-button" style="color: #8700FF;">Read More</button>
+                <div class="banner-buttons" style="text-align: center; padding-bottom: 60px;">
+                    <button class="banner-button">View All</button>
                 </div>
-            </div>
-            <div class="arrow-icons">
-                <i class="fa-solid fa-arrow-left"></i>
-                <i class="fa-solid fa-arrow-right"></i>
             </div>
         </section>
-        
+
     </main>
     <footer class="footer-section">
         <div class="footer-section-contents width">
             <div class="footer-section-content-first">
                 <div class="footer-logo-section">
                     <div><img src="images/logo1.png" alt="" class="footer-logo"></div>
-                <div class="footer-title">Kids <br> Education</div>
+                    <div class="footer-title">Kids <br> Education</div>
                 </div>
-                <p class="footer-description">Empowering young minds with creativity, knowledge, and joy. Together, we nurture tomorrow's leaders in a safe, supportive, and inspiring learning environment.</p>
+                <p class="footer-description">Empowering young minds with creativity, knowledge, and joy. Together, we
+                    nurture tomorrow's leaders in a safe, supportive, and inspiring learning environment.</p>
             </div>
             <div class="footer-section-content">
-                <div class="footer-second-part-title"><h3>About School</h3></div>
+                <div class="footer-second-part-title">
+                    <h3>About School</h3>
+                </div>
                 <div class="footer-menus">
                     <ul>
                         <li><a href="" class="footer-menu">Home</a></li>
@@ -128,6 +181,6 @@
             </div>
         </div>
     </footer>
-</body> 
+</body>
 
 </html>
