--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <div class="card card-1-background">
                         <img src="images/kinder.png" alt="" class="card-image">
                         <h3 class="card-title">Kinder (3-6) Years</h3>
-                        <p class="card-description">Nurturing young minds with fun activities, foundational skills, and a
+                        <p class="card-description">Nurturing young minds with fun activities, foundational skills, and
+                            a
                             safe, engaging environment for early learning.</p>
                         <button class="card-button" style="color: #64C8FF;">Read More</button>
                     </div>
@@ -94,8 +95,8 @@
                     <i class="fa-solid fa-arrow-left"></i>
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
-            </section>
-            </div>
+        </section>
+        </div>
         <section class="stories">
             <div class="width">
                 <div class="curriculum-title">
@@ -105,34 +106,44 @@
                     <div class="stories-cards-1">
                         <div class="stories-card-1">
                             <img src="images/story-1.png" alt="" class="stories-image">
-                            <button class="stories-button">November 19, 2019</button>
-                            <h3 class="stories-title">A fun toddler coloring training on
-                                classroom</h3>
-                            <p class="stories-description">Beautiful branding for changes by Never Now in Australia.
-                                changes is a platform for open discussion in an inclusive and
-                                collaborative environment, providing the...</p>
+                            <div class="stories-card-1-content">
+                                <button class="stories-button">November 19, 2019</button>
+                                <h3 class="stories-title">A fun toddler coloring training on
+                                    classroom</h3>
+                                <p class="stories-description">Beautiful branding for changes by Never Now in Australia.
+                                    changes is a platform for open discussion in an inclusive and
+                                    collaborative environment, providing the...</p>
+                            </div>
                         </div>
                     </div>
                     <div class="stories-cards-2">
-                        <div class="stories-card-2"><img src="images/story-2.png" alt="" class="stories-image"><button
-                                class="stories-button">November 19, 2019</button>
-                            <h3 class="stories-title">A fun toddler coloring training on
-                                classroom</h3>
+                        <div class="stories-card-2"><img src="images/story-2.png" alt="" class="stories-image">
+                            <div class="stories-card-2-content">
+                                <button class="stories-button-2">November 19, 2019</button>
+                            <h3 class="stories-title-2">Find out if a school fits the
+                                family’s needs</h3>
+                            </div>
                         </div>
-                        <div class="stories-card-2"><img src="images/story-3.png" alt="" class="stories-image"><button
-                                class="stories-button">November 19, 2019</button>
-                            <h3 class="stories-title">A fun toddler coloring training on
-                                classroom</h3>
+                        <div class="stories-card-2"><img src="images/story-3.png" alt="" class="stories-image">
+                            <div class="stories-card-2-content">
+                                <button class="stories-button-2" style="background-color: #5D58F0;">November 19, 2019</button>
+                            <h3 class="stories-title-2">Summer math & literacy
+                                centres for kids</h3>
+                            </div>
                         </div>
-                        <div class="stories-card-2"><img src="images/story-4.png" alt="" class="stories-image"><button
-                                class="stories-button">November 19, 2019</button>
-                            <h3 class="stories-title">A fun toddler coloring training on
-                                classroom</h3>
+                        <div class="stories-card-2"><img src="images/story-4.png" alt="" class="stories-image">
+                            <div class="stories-card-2-content">
+                                <button class="stories-button-2">September 10, 2019</button>
+                            <h3 class="stories-title-2">Classroom management
+                                techniques for new tutors</h3>
+                            </div>
                         </div>
-                        <div class="stories-card-2"><img src="images/story-5.png" alt="" class="stories-image"><button
-                                class="stories-button">November 19, 2019</button>
-                            <h3 class="stories-title">A fun toddler coloring training on
-                                classroom</h3>
+                        <div class="stories-card-2"><img src="images/story-5.png" alt="" class="stories-image">
+                            <div class="stories-card-2-content">
+                                <button class="stories-button-2">July 19, 2019</button>
+                            <h3 class="stories-title-2">Conversation rhymes
+                                improve kids listening</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
