Added Final Changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="logo-title">
                         <h3>
-                            SCHOOL
+                            Bright <br> Star School
                         </h3>
                     </div>
                 </div>
@@ -41,6 +41,12 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
+            <div class="marquee">
+                <div class="marquee-content">
+                  Welcome to BRIGHT STAR School! 🎓✨ Admissions Open for 2025 - Enroll Now! 🚸
+                </div>
+              </div>
+              
             <div class="banner">
                 <div class="banner-content">
                     <div class="banner-title">
@@ -152,14 +158,13 @@
                 </div>
             </div>
         </section>
-
     </main>
     <footer class="footer-section">
         <div class="footer-section-contents width">
             <div class="footer-section-content-first">
                 <div class="footer-logo-section">
                     <div><img src="images/logo1.png" alt="" class="footer-logo"></div>
-                    <div class="footer-title">Kids <br> Education</div>
+                    <div class="footer-title">Bright <br> Star School</div>
                 </div>
                 <p class="footer-description">Empowering young minds with creativity, knowledge, and joy. Together, we
                     nurture tomorrow's leaders in a safe, supportive, and inspiring learning environment.</p>
